Overview of changes in the next unstable release of Glib
========================================================

* Fix fetching default values for unichar properties of custom subclasses.

Overview of changes in Glib 1.230
=================================

* Don't copy boxed objects when passing from Perl to C.  This mainly affects
  Perl subclasses which have signal handlers that involve boxed objects and use
  signal_chain_from_overridden() to call parent signal handlers.  With this
  change, the parent's handlers will now operator on the same object that the
  Perl code sees, and changes consequently propagate properly.
* Correctly handle variables with "set" magic attached in the default
  SET_PROPERTY implementation for custom Perl subclasses.
* Add Glib::Param::GType support.
* Make Glib::Flags::bool() and as_arrayref() callable as methods.
* Allow undef for default_value in Glib::ParamSpec->string.
* Improve the documentation in a few places.
* Add gperl_hv_take_sv, a wrapper for hv_store, to our C API.
* Fix some build and test failures.

Overview of changes in Glib 1.221
=================================

* Fix a few build and test suite issues.

Overview of changes in Glib 1.220
=================================

 Since 1.20x (the previous stable series)
 ----------------------------------------
  * Add constants Glib::SOURCE_CONTINUE and SOURCE_REMOVE for use in
    source-type callbacks.
  * Add Glib::Child::watch_add.
  * Add Glib::OptionContext and Glib::OptionGroup.
  * Allow calling Glib::Flags->as_arrayref directly, as an alternative to the
    @{} syntax.
  * Add Glib::ParamSpec->value_validate and Glib::ParamSpec->value_cmp.

 Since 1.214
 -----------
  * Nada.

Overview of changes in Glib 1.214
=================================

* Fix a leak in the handling of callback arguments.
* Fix many errors and glitches in the POD generated by Glib::GenPod.
* Fix some test suite issues and documentation glitches.

Overview of changes in Glib 1.213